# liqui_hist

./: .gitignore  Procfile  Procfile_flask  api.py  app.py  binance_liquidation.py  clean.py  db_utils.py  flask_static.py  liqs.py  liqs_app.py  liqs_app_run.py  liqs_flask.py  pyproject.toml  python_app.py  requirements.txt  utils.py  wsgi.py
templates/: index.html
